sfdc/force-app/main/default/objects/Fulcrum_Backfill_Result__c/Fulcrum_Backfill_Result__c.object-meta.xml
<CustomObject>
    <label>MarginArc Backfill Result</label>
    <nameField>
        <displayFormat>FBR-{00000}</displayFormat>
        <label>Backfill Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MarginArc Backfill Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>