sfdc/force-app/main/default/objects/Fulcrum_Backfill_Result__c/fields/Actual_GP__c.field-meta.xml
<CustomField>
    <fullName>Actual_GP__c</fullName>
    <label>Actual GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>