sfdc/force-app/main/default/objects/Fulcrum_Backfill_Result__c/fields/Actual_Margin__c.field-meta.xml
<CustomField>
    <fullName>Actual_Margin__c</fullName>
    <label>Actual Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>