sfdc/force-app/main/default/objects/Fulcrum_Backfill_Result__c/fields/GP_Delta__c.field-meta.xml
<CustomField>
    <fullName>GP_Delta__c</fullName>
    <label>GP Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>