sfdc/force-app/main/default/objects/Fulcrum_Backfill_Result__c/fields/Margin_Delta__c.field-meta.xml
<CustomField>
    <fullName>Margin_Delta__c</fullName>
    <label>Margin Delta</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>