sfdc/force-app/main/default/objects/Fulcrum_Backfill_Result__c/fields/OEM__c.field-meta.xml
<CustomField>
    <fullName>OEM__c</fullName>
    <label>OEM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>