sfdc/force-app/main/default/objects/Fulcrum_Backfill_Result__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Backfill Results</relationshipLabel>
    <relationshipName>Backfill_Results</relationshipName>
    <type>Lookup</type>
</CustomField>