sfdc/force-app/main/default/objects/Fulcrum_Backfill_Result__c/fields/Recommended_GP__c.field-meta.xml
<CustomField>
    <fullName>Recommended_GP__c</fullName>
    <label>Recommended GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>