sfdc/force-app/main/default/objects/Fulcrum_Backfill_Result__c/fields/Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Name__c</fullName>
    <label>Rep Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>