sfdc/force-app/main/default/objects/Fulcrum_Backfill_Result__c/fields/Win_Probability__c.field-meta.xml
<CustomField>
    <fullName>Win_Probability__c</fullName>
    <label>Win Probability</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>